# distributed-ranges

./: .cmake-format.py  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  README.rst  base-requirements.txt  devcloud.rst  format_res.py  ignore-spelling-words.txt  pyproject.toml  requirements.txt  run.csh  run_benchmarks.sh  security.rst  steps.md
benchmarks/gbench/: CMakeLists.txt  README.rst
benchmarks/gbench/common/: black_scholes.cpp  common-bench.hpp  distributed_vector.cpp  dot_product.cpp  dr_bench.hpp  exclusive_scan.cpp  inclusive_exclusive_scan.cpp  inclusive_scan.cpp  sort.cpp  stream.cpp  stream.hpp
benchmarks/gbench/mhp/: #stencil_2d.cpp#  .#stencil_2d.cpp  CMakeLists.txt  chunk.cpp  fft3d.cpp  mdspan.cpp  mhp-bench.cpp  mpi.cpp  rooted.cpp  shallow_water.cpp  stencil_1d.cpp  stencil_2d.cpp  streammhp.cpp  transpose.cpp  wave_equation.cpp  wave_utils.hpp  xhp-bench.hpp
benchmarks/gbench/mp/: CMakeLists.txt  fft3d.cpp  game_of_life.cpp  gemv.cpp  mp-bench.cpp  mpi.cpp  rooted.cpp  shallow_water.cpp  stencil_1d.cpp  stencil_2d.cpp  streammp.cpp  transpose.cpp  wave_equation-wide.cpp  wave_equation.cpp  wave_equation_wide.cpp
benchmarks/gbench/shp/: CMakeLists.txt  fft3d.cpp  gemm.cpp  shp-bench.cpp  sort.cpp  xhp-bench.hpp
benchmarks/gbench/sp/: CMakeLists.txt  fft3d.cpp  gemm.cpp  sp-bench.cpp
examples/cpu/: CMakeLists.txt  stencil-1d-cpu.cpp  transpose-cpu-ref.cpp  transpose-cpu.cpp  vector-add-cpu-ref.cpp  vector-add-cpu.cpp  vector-add-presentation.cpp  vector-add.cpp
examples/mhp/: CMakeLists.txt  dot_product_benchmark.cpp  hello_world.cpp  stencil-1d-array.cpp  stencil-1d-pointer.cpp  stencil-1d.cpp  stencil-2d-matrix-rows.cpp  stencil-2d-matrix.cpp  stencil-slide.cpp  tile-example.cpp  transpose-cpu.cpp  transpose-ref.cpp  vector-add-ref.cpp  vector-add.cpp  wave_equation.cpp
examples/mp/: CMakeLists.txt  dot_product_benchmark.cpp  hello_world.cpp  local_issue.cpp  sparse_benchmark.cpp  sparse_matrix.cpp  sparse_matrix_matrix_mul.cpp  stencil-1d-array.cpp  stencil-1d-pointer.cpp  stencil-1d.cpp  stencil-slide.cpp  transpose-cpu.cpp  vector-add.cpp
examples/serial/: CMakeLists.txt  transpose-serial.cpp  vector-add-serial.cpp
examples/shp/: CMakeLists.txt  CsvPlotter.py  black_scholes_benchmark.cpp  copy_test.cpp  dot_product.cpp  dot_product_benchmark.cpp  dot_product_sycl.cpp  dot_product_sycl_buffers.cpp  exclusive_scan_benchmark.cpp  exclusive_scan_example.cpp  fft3d.cpp  gather_test.cpp  gemm_benchmark.cpp  gemm_example.cpp  gemv_benchmark.cpp  gemv_example.cpp  inclusive_scan_benchmark.cpp  inclusive_scan_example.cpp  matrix_example.cpp  run_benchmark.csh  set_env.csh  sort.cpp  sort_benchmark.cpp  sparse_test.cpp  take_example.cpp  test_range.cpp  vector_example.cpp  zip_example.cpp
examples/sp/: CMakeLists.txt  black_scholes_benchmark.cpp  copy_test.cpp  dot_product.cpp  dot_product_benchmark.cpp  exclusive_scan_benchmark.cpp  exclusive_scan_example.cpp  gather_test.cpp  gemm_benchmark.cpp  gemm_example.cpp  gemv_benchmark.cpp  gemv_example.cpp  inclusive_scan_benchmark.cpp  inclusive_scan_example.cpp  matrix_example.cpp  sort.cpp  sort_benchmark.cpp  sparse_test.cpp  take_example.cpp  test_range.cpp  vector_example.cpp  zip_example.cpp
fuzz/cpu/: CMakeLists.txt  cpu-fuzz.cpp  cpu-fuzz.hpp
include/: CMakeLists.txt  distributed-ranges.hpp
include/algorithms/: for_each.hpp
include/collectives/: copy.hpp
include/concepts/: concepts.hpp
include/details/: distributed-range.hpp  distributed_span.hpp  distributed_vector.hpp  distributions.hpp  execution_policies.hpp  remote_span.hpp
include/dr/: distributed-ranges.hpp  mhp.hpp  mp.hpp  shp.hpp  sp.hpp
include/dr/algorithms/: algorithms.hpp  copy.hpp  for_each.hpp  reduce.hpp  sycl_algorithms.hpp  transpose.hpp
include/dr/collectives/: copy.hpp
include/dr/concepts/: concepts.hpp
include/dr/detail/: communicator.hpp  coo_matrix.hpp  csr_matrix_base.hpp  enumerate.hpp  format_shim.hpp  generate_csr.hpp  generate_random_csr.hpp  halo.hpp  index.hpp  iterator_adaptor.hpp  local_csr_matrix.hpp  logger.hpp  matrix_entry.hpp  matrix_io.hpp  mdspan_shim.hpp  mdspan_utils.hpp  memory.hpp  multiply_view.hpp  normal_distributed_iterator.hpp  onedpl_direct_iterator.hpp  owning_view.hpp  ranges.hpp  ranges_shim.hpp  remote_subrange.hpp  segments_tools.hpp  sycl_utils.hpp  tuple_utils.hpp  view_detectors.hpp
include/dr/details/: algorithms.hpp  alignment.hpp  allocators.hpp  common.hpp  communicator.hpp  device_subrange.hpp  distributed_mdarray.hpp  distributed_mdspan.hpp  distributed_span.hpp  distributed_vector.hpp  distributions.hpp  enumerate.hpp  execution_policies.hpp  halo.hpp  iterator_adaptor.hpp  logger.hpp  memory.hpp  normal_distributed_iterator.hpp  onedpl_direct_iterator.hpp  owning_view.hpp  ranges.hpp  ranges_shim.hpp  remote_memory.hpp  remote_span.hpp  remote_subrange.hpp  remote_vector.hpp  segments_tools.hpp  view_detectors.hpp  views.hpp
include/dr/mhp/: alignment.hpp  allocator.hpp  common_support.hpp  cpos.hpp  global.hpp  halo.hpp  views.hpp  (+1 more)
src-python/drbench/: README.rst  pyproject.toml
test/cmake-application/: CMakeLists.txt  mhp-app.cpp  mp-app.cpp
tests/: CMakeLists.txt  communicator.cpp  cpu-mpi-tests.cpp  cpu-mpi-tests.hpp  cpu-tests.cpp  distributed_vector.cpp  halo.cpp  mdspan.cpp  remote_memory.cpp  remote_vector.cpp
tests/cpu/: CMakeLists.txt  algorithms.cpp  communicator.cpp  copy.cpp  cpu-tests.cpp  cpu-tests.hpp  distributed_vector.cpp  fill.cpp  halo.cpp  mdspan.cpp  reduce.cpp  remote_memory.cpp  remote_vector.cpp  span_halo.cpp  transform.cpp  transform_reduce.cpp  unstructured_halo.cpp  views.cpp
tests/include/: common-tests.hpp
tests/serial/: CMakeLists.txt  serial-tests.cpp
tests/shp/: CMakeLists.txt  algorithms.cpp  shp-tests.cpp  views.cpp
tests/sycl/: CMakeLists.txt  sycl-tests.cpp
tests/sycl-mpi/: CMakeLists.txt  distributed_vector.cpp  dpl.cpp  reduce.cpp  sycl-mpi-tests.cpp  sycl-mpi-tests.hpp  transform.cpp  unstructured_halo.cpp
(+2296 files in other folders)
